<resources>
  <string name="app_name">Tag You\'re It</string>

  <string name="error_text">Error Text</string>
  <string name="no_pdf">No Sheet Music Available</string>
  <string name="try_again">Try Again</string>
  <string name="music_content_description">Sheet Music Identifier</string>
  <string name="track_content_description">Track Identifier</string>
  <string name="video_content_description">Video Identifier</string>
  <string name="long_version">Long version</string>
  <string name="by_arranger">Arranger</string>
...
  <string name="nav_lists">Lists</string>
  <string name="nav_settings">Settings</string>
  <string name="nav_pitch_pipe">Pitch Pipe</string>

  <string name="action_add_to_default_list">Add to Default List</string>
  <string name="action_delete_from_default_list">Remove from Default List</string>
  <string name="action_search">Search</string>
  <string name="action_sort">Sort</string>
  <string name="action_add_list">Add List</string>
  <string name="action_delete_list">Delete List</string>
  <string name="action_list_options">List Options</string>
  <string name="action_menu">Menu</string>

  <string name="network_error">No network connection available.</string>
  <string name="previous">Previous</string>
  <string name="next">Next</string>

  <string name="no_results">No Results Found</string>
...

  <string name="sung_key">Key of</string>
  <string name="views">views</string>

  <string name="tag_menu_key">Key</string>
  <string name="tag_menu_tracks">Tracks</string>
  <string name="tag_menu_all_parts">All Parts</string>
  <string name="tag_menu_tenor">Tenor</string>
  <string name="tag_menu_lead">Lead</string>
  <string name="tag_menu_bass">Bass</string>
  <string name="tag_menu_bari">Bari</string>
  <string name="tag_menu_other1">Other</string>
  <string name="tag_menu_other2">Other</string>
...
  <string name="tag_menu_video1">Video 1</string>
  <string name="tag_menu_video2">Video 2</string>
  <string name="tag_menu_video3">Video 3</string>
  <string name="tag_menu_video4">Video 4</string>
  <string name="tag_menu_video_more">More…</string>
  <string name="tag_menu_rate">Rate</string>
  <string name="tag_menu_share">Share</string>
  <string name="tag_menu_lists">Lists</string>

  <string name="video_all">All Videos</string>

  <string name="filter_part_key">filter_part</string>
  <string name="filter_sheet_music_key">filter_sheet_music</string>
...
