...
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

      <ImageView
        android:id="@+id/player_control"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/playbackControl"
        android:visibility="gone"/>

    </LinearLayout>
...
        android:textColor="#BBBBBB"
        android:textSize="14sp"/>

    </LinearLayout>

    <ImageView
      android:id="@+id/player_close"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_gravity="end"
      android:contentDescription="@string/close"
      android:paddingStart="5dp"
      android:paddingTop="5dp"
...
