...
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical">

    <TextView
      android:id="@+id/tag_detail_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:ellipsize="end"
      android:maxLines="1"
      android:text="@string/tag_name"
...
      android:text="@string/tag_menu_key"
      android:textColor="@color/lightSecondaryTitle"
      android:textSize="12sp"
      android:theme="@style/PrimaryFlatButton" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/tag_detail_share_button"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:drawableTop="@drawable/share"
      android:drawablePadding="2dp"
...
          android:layout_marginBottom="10dp"
          android:gravity="start|center_vertical"
          android:text="@string/tag_menu_tracks"
          android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_track_all"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/play_circle_outline"
          android:drawablePadding="30dp"
          android:fontFamily="sans-serif"
          android:gravity="start|center_vertical"
...
